[package]
name = "creusot-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
creusot-contracts = "0.6.0-dev"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }

[patch.crates-io]
creusot-contracts = { path = "/home/nomura/ghq/github.com/creusot-rs/creusot/creusot-contracts" }
